--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 ClientSettings/
 *.Sav
 node_modules/
+/Config
+stats-cool.txt
+tokenManager/tokens.json
+tokenManager/tokens.json
+/tokenManager
+Config/catalog_config.json
+Config/config.json
+/privatedata
